vertical dialog overflow style fixed

--- a/src/app/employee/detail/status-dialog/status-dialog.component.scss
+++ b/src/app/employee/detail/status-dialog/status-dialog.component.scss
@@ -1,13 +1,19 @@
-.mat-card-header {
-  justify-content: center;
-}
+.wrapper {
+  width: 100%;
+  max-height: 80vh;
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
+  .mat-card-header {
+    justify-content: center;
+  }
 
-.align-text-icon {
-  margin-top: -2px;
-  margin-left: 10px;
-}
+  .align-text-icon {
+    margin-top: -2px;
+    margin-left: 10px;
+  }
 
-.readonly-wrapper {
-  pointer-events: none !important;
-  cursor: not-allowed !important;
+  .readonly-wrapper {
+    pointer-events: none !important;
+    cursor: not-allowed !important;
+  }
 }
