--- a/src/app/employee/detail/transfer-dialog/transfer-dialog.component.scss
+++ b/src/app/employee/detail/transfer-dialog/transfer-dialog.component.scss
@@ -1,8 +1,14 @@
-.mat-card-header {
-  justify-content: center;
-}
-
-.issue-description-field-wrapper {
+.wrapper {
   width: 100%;
-  margin-top: 10px;
+  max-height: 80vh;
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
+  .mat-card-header {
+    justify-content: center;
+  }
+
+  .issue-description-field-wrapper {
+    width: 100%;
+    margin-top: 10px;
+  }
 }
